code along complete

--- a/index.ipynb
+++ b/index.ipynb
@@ -49,11 +49,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 7, 9])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "import numpy as np\n",
+    "\n",
+    "a = np.array([1,2,3])\n",
+    "b = np.array ([4,5,6]) \n",
+    "c=a+b\n",
+    "c"
    ]
   },
   {
@@ -79,11 +96,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 3, 3])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code here"
+    "# Code here\n",
+    "a = np.array([1,2,3])\n",
+    "b = np.array ([4,5,6]) \n",
+    "c=b-a\n",
+    "c"
    ]
   },
   {
@@ -109,11 +141,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 6],\n",
+       "       [5, 9],\n",
+       "       [7, 9]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "# Adding 2-D matrices\n",
+    "A = np.array([[1, 2], [3, 4], [5, 6]])\n",
+    "B = np.array([[1, 4], [2, 5], [2, 3]])\n",
+    "# Add matrices A and B\n",
+    "C = A + B\n",
+    "C"
    ]
   },
   {
@@ -132,11 +183,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (3,2) (2,2) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-c1a0c604c012>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mB\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Add matrices A and B\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mC\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mA\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mB\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mC\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,2) (2,2) "
+     ]
+    }
+   ],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "\n",
+    "# Add matrices with mismatched dimensions\n",
+    "A = np.array([[1, 2], [3, 4], [5, 6]])\n",
+    "B = np.array([[1, 4], [2, 5]])\n",
+    "# Add matrices A and B\n",
+    "C = A + B\n",
+    "C"
    ]
   },
   {
@@ -164,11 +234,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 6 7]\n",
+      "[[ 5  6]\n",
+      " [ 7  8]\n",
+      " [ 9 10]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "print(a+4)\n",
+    "print(A+4)"
    ]
   },
   {
@@ -193,11 +276,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n",
+      "[[2]\n",
+      " [4]\n",
+      " [6]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3,  4],\n",
+       "       [ 7,  8],\n",
+       "       [11, 12]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "A = np.array([[1, 2], [3, 4], [5, 6]])\n",
+    "print(A)\n",
+    "B = np.array([[2], [4], [6]])\n",
+    "print(B)\n",
+    "A+B"
    ]
   },
   {
@@ -226,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
